Added version bumping on the stylesheet

--- a/Admin/public/en-admin/index.html
+++ b/Admin/public/en-admin/index.html
@@ -10,7 +10,7 @@
 	<meta name="theme-color" content="#ffffff">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/en-admin/pack/styles.css" />
+    <link rel="stylesheet" href="/en-admin/pack/styles.css?v=1" />
 </head>
 <body>
     <div id='react-root'></div>
@@ -22,6 +22,6 @@
             <p id="react-loading-text"></p>
         </div>
     </div>
-    <script src="/en-admin/pack/main.generated.js?v=4"></script>
+    <script src="/en-admin/pack/main.generated.js?v=1"></script>
 </body>
 </html>
