--- a/UI/public/mobile.html
+++ b/UI/public/mobile.html
@@ -15,6 +15,7 @@
     </div>
 	<script type='text/javascript'>
 		storedToken = true;
+		hashRouter = true;
 		apiHost='';
 	</script>
     <script src="pack/main.generated.js?v=1"></script>
